[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery"
version = "0.1.0"
description = "Network discovery and analysis tool."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Kruge" }]
dependencies = [
    "scapy"
]

[project.scripts]
discovery = "discovery.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"discovery" = [ "Resources/*.json"]
